# edge-detector

./: .gitignore  CMakeLists.txt  README.md
src/: edge_detector.cpp  edge_detector.hpp  main.cpp
